Added the API for the profile Master